<?xml version="1.0" encoding="utf-8"?>
<!--
	Author:		Alberto Gil Tesa
	WebSite:	http://giltesa.com
	License:	CC BY-NC-SA 3.0
				http://goo.gl/CTYnN
				
	Project:	Task Calendar
	Package:	com.giltesa.taskcalendar
	File:		/TaskCalendar/res/menu/main_menu.xml
-->


<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/main_menu_newtask"
        android:title="@string/main_menu_newtask"
        android:orderInCategory="1"
        android:showAsAction="never"        
        /> 
    
    <item
        android:id="@+id/main_menu_settings"
        android:title="@string/main_menu_settings"
        android:orderInCategory="2"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/main_menu_exit"
        android:title="@string/main_menu_exit"
        android:orderInCategory="3"
        android:showAsAction="never"/>        

</menu>