<?xml version="1.0" encoding="utf-8"?>
<!--
    Author:     Alberto Gil Tesa
    WebSite:    http://giltesa.com
    License:    CC BY-NC-SA 3.0
                http://goo.gl/CTYnN

    Project:    Task Calendar
    Package:    com.giltesa.taskcalendar
    File:       /TaskCalendar/res/layout/settings_about.xml
-->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/settings_about_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dip"
            android:src="@drawable/ic_about_logo" />

        <TextView
            android:id="@+id/settings_about_apptitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/about_apptitle"
            android:textSize="25dip" />

        <TextView
            android:id="@+id/settings_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/about_version"
            android:textSize="18dp" />

         <TextView
            android:id="@+id/settings_about_uthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dip"
            android:text="@string/about_author"
            android:textSize="18dip" />        
        
        <TextView
            android:id="@+id/settings_about_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/about_blog_url_title"
            android:textSize="18dip" />
                
    </LinearLayout>

</ScrollView>